# victorhqc.com

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml  bacon.toml  package-lock.json
.cargo/: config.toml.example
.githooks/: pre-commit
.sqlx/: query-00713719d70314ea1be8ea0fdf54f15f51b5ddfa049b5ca4c9b3b24f852e04e0.json  query-052864a828738531968e1e02054232b3879266ddb768029ea8989d8420c29528.json  query-0824de515a6dfd0a2ba3b4511f56741334b749094a909d77a1cc203675161681.json  query-0ef057c2205909862a250c6f28f33fdef7f86580148f37b6154dc331e6c90a5b.json  query-1348a37680ee699f7c986aacfa1354103808527ab8eef531e6464abe1127f3ae.json  query-16cbcc76e0b7180ccbc761fb593629a23599c37cec0e0fa86a4f4d04227cdef7.json  query-282e587029a1ed1310053b4b62a9e3840597ec3616afbaf76920c956062f2b64.json  query-2e5a62c672e7370b8c446e230242697f8560985c6dbf82fc119b26587dd22b9f.json  query-34e50fbfcc0c67eca50d80937dbf772987248b53d4945a6c99f2fb25e224599a.json  (+27 more)
api/: .env.example  Cargo.toml  Rocket.toml  build.rs  schema.gql
api.victorhqc.com/: Cargo.toml  README.md
api.victorhqc.com/scripts/: download_binary.js
api.victorhqc.com/src/: main.rs
api.victorhqc.com/src/handlers/: unsplash.rs
api.victorhqc.com/src/modules/unsplash/: cache.rs  client.rs  entities.rs  mod.rs  pictures.rs  state.rs
api/migrations/: 20240507195435_init.down.sql  20240507195435_init.up.sql  20240927140639_film_meta.down.sql  20240927140639_film_meta.up.sql
api/scripts/unix/: start.sh
api/scripts/windows/: start.bat
api/src/: main.rs
api/src/bootstrap/: mod.rs  photos.rs
api/src/cache/: image_cache.rs  mod.rs
api/src/db/: mod.rs  photos.rs
api/src/graphql/: context.rs  graph.rs  mod.rs  routes.rs  schema.gql  sdl_gen.rs
api/src/graphql/loaders/: exif_meta.rs  fujifilm_recipe.rs  mod.rs  photo.rs  tag.rs
api/src/graphql/models/: exif_meta.rs  fujifilm_recipe.rs  mod.rs  photo.rs  tag.rs
api/src/graphql/mutations/: mod.rs  photo.rs
api/src/graphql/queries/: exif_meta.rs  fujifilm_recipe.rs  mod.rs  photo.rs  tag.rs
api/src/models/: fujifilm.rs  mod.rs
api/src/models/exif_meta/: db.rs  mod.rs
api/src/models/exifmeta/: db.rs
api/src/models/fujifilm/: builder.rs  db.rs  mod.rs  recipe.rs
api/src/models/fujifilm/from_str/: grain_effect.rs  mod.rs  wb_shift.rs  white_balance.rs
api/src/models/fujifilm/from_tuple/: mod.rs
api/src/models/fujifilm/str/: clarity.rs  color_chrome_effect.rs  color_chrome_fx_blue.rs  film_simulation.rs  grain_effect.rs  mod.rs  monochromatic_color.rs  monochromatic_shift.rs  sharpness.rs  tone_curve.rs  wb_shift.rs  white_balance.rs
api/src/models/photo/: db.rs  mod.rs
api/src/models/tag/: db.rs  mod.rs
api/src/queries/: photos.rs
api/src/routes/: images.rs  mod.rs  photos.rs
api/src/utils/: hashmap.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/src/commands/: create.rs  debug_compression.rs  mod.rs  re_upload.rs
cli/src/exiftool/: json.rs  mod.rs  spawn.rs
cli/src/photo/: aws.rs  build_images.rs  mod.rs  orientation.rs  process.rs  upload.rs
cli/src/utils/: capture.rs  get_some_fujifilm_recipe.rs  is_valid_extension.rs  mod.rs
core/: Cargo.toml  build.rs
core/migrations/: 20240507195435_init.up.sql  20240927140639_film_meta.up.sql  20260119194659_orientation.down.sql  20260119194659_orientation.up.sql  20260319000000_blurhash.down.sql  20260319000000_blurhash.up.sql
core/src/: db.rs  lib.rs
core/src/aws/: image_size.rs  mod.rs  photo.rs
core/src/exif/: json.rs  mod.rs
core/src/models/: mod.rs
core/src/models/exif_meta/: db.rs  mod.rs
core/src/models/exif_meta/from_exif/: aperture.rs  city.rs  date_taken.rs  exif_meta.rs  exposure_compensation.rs  focal_length.rs  iso.rs  maker.rs  mod.rs  photography_details.rs  rating.rs  shutter_speed.rs
core/src/models/exif_meta/str/: maker.rs
core/src/models/fujifilm/: builder.rs  db.rs  mod.rs  recipe.rs
core/src/models/fujifilm/from_exif/: clarity.rs  color.rs  color_chrome_effect.rs  color_chrome_fx_blue.rs  d_range_priority.rs  dynamic_range.rs  film_simulation.rs  fujifilm_recipe.rs  fujifilm_recipe_details.rs  grain_effect.rs  high_iso_noise_reduction.rs  mod.rs  monochromatic_color.rs  sharpness.rs  tone_curve.rs  trans_sensor.rs  white_balance.rs  white_balance_shift.rs
core/src/models/fujifilm/from_tuple/: grain_effect.rs
core/src/models/fujifilm/str/: color.rs  film_simulation.rs  grain_effect.rs  high_iso_noise_reduction.rs  mod.rs  monochromatic_color.rs  monochromatic_shift.rs  wb_shift.rs  white_balance.rs
core/src/models/photo/: db.rs  mod.rs
core/src/models/photo/str/: filetype.rs
core/src/models/tag/: db.rs  mod.rs
core/src/utils/: hashmap.rs  mod.rs  str.rs
deploy/: ansible.cfg
web/: .env.example  Cargo.toml  build.rs
web/migrations/: 20250119121430_init_analytics.down.sql  20250119121430_init_analytics.up.sql
web/public/: blurhash_placeholder.js  index.js  main_menu.js  menu.js  one_photo.js  one_photo_mobile.js  progressive_image.js
web/scripts/: one_photo.js  portfolio.js
web/src/: collections.rs  main.rs  state.rs
web/src/analytics/: mod.rs  path.rs  record.rs  recorder.rs  routes.rs  session.rs  visit.rs  visits.rs
web/src/analytics/db/: mod.rs  path.rs  session.rs  visit.rs
web/src/engine/: mod.rs
web/src/gql/: mod.rs
web/src/gql/queries/: get-one.graphql  get-portfolio.graphql
web/src/prefetch/: mod.rs
web/src/requests/: mod.rs  one_photo.rs  photos.rs
web/src/routes/: analytics.rs  context.rs  index.rs  mod.rs  portfolio.rs  user_agent.rs
web/src/tera_utils/: functions.rs
web/src/utils/: device.rs
web/templates/: index.css  index.html  index.js  photo.html  portfolio.css  portfolio.html  styles.css
web/templates/_ajax/: one_photo.css  one_photo.html  one_photo.tera  portfolio_collection.css  portfolio_collection.html
web/templates/_blocks/: base.html  main_menu.html  portfolio_collection.html
web/templates/_components/: main_menu.css  main_menu.html  open_photo.css  open_photo.html  photo.html  photo_info.css  photo_info.html  portfolio_menu.css  portfolio_menu.html  simple_photo.html
(+56 files in other folders)
