[workspace]

resolver = "2"

members = ["api", "core", "cli", "web"]

[workspace.dependencies]

#
# Workspace member crates
#

core-victorhqc-com = { path = "core" }

#
# External crates
#

dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.11.0"
serde = "1.0.210"
serde_json = "1.0.128"
snafu = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
time = "0.3.36"
tokio = "1.40.0"
uuid = { version = "1.10.0", features = ["v4"] }

[profile.ephemeral-build]
opt-level = 2
codegen-units = 8
