[workspace]

resolver = "2"

members = ["api", "core", "cli", "web"]

[workspace.dependencies]

#
# Workspace member crates
#

core-victorhqc-com = { path = "core" }

#
# External crates
#

dotenvy = "0.15.7"
fuji = "0.2.0"
log = "0.4.29"
md5 = "0.8.0"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
regex = "1.12.2"
serde = "1.0.228"
serde_json = "1.0.149"
snafu = "0.8.9"
sqlx = "0.8.6"
strum = "0.27.2"
strum_macros = "0.27.2"
time = "0.3.46"
tokio = "1.49.0"
uuid = { version = "1.20.0", features = ["v4"] }

[profile.ephemeral-build]
inherits = "release"
opt-level = 2
codegen-units = 8
