[package]
name = "api_victorhqc_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = "1.4"
dotenv = "0.15.0"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.137"
snafu = "0.7.1"
tokio = { version = "1" }