[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.10", features = ["dataloader"] }
async-graphql-rocket = "7.0.10"
async-std = "1.13.0"
async-trait = "0.1.83"
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
snafu = "0.8.4"
sqlx = { version = "0.8.2", features = [ "sqlite", "runtime-tokio", "macros", "migrate", "time" ] }
strum = "0.26.3"
strum_macros = "0.26.4"
time = { version = "0.3.36", features = ["serde-human-readable", "formatting"] }
