[package]
name = "api-victorhqc-com"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.10", features = ["dataloader"] }
async-graphql-rocket = "7.0.10"
core-victorhqc-com = { path = "../core" }
dotenvy = "0.15.7"
log = "0.4.22"
once_cell = "1.20.1"
pretty_env_logger = "0.5.0"
regex = "1.11.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
snafu = { version = "0.8.5", features = ["default", "backtrace"] }
strum = "0.26.3"
strum_macros = "0.26.4"
time = { version = "0.3.36", features = ["serde-human-readable", "formatting"] }
