[package]
name = "api-victorhqc-com"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-graphql = { version = "7.0.10", features = ["dataloader"] }
async-graphql-rocket = "7.0.10"
core-victorhqc-com.workspace = true
dotenvy.workspace = true
log.workspace = true
md5.workspace = true
once_cell = "1.20.1"
pretty_env_logger.workspace = true
regex.workspace = true
rocket = { version = "0.5.1", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
snafu = { workspace = true, features = ["default", "backtrace"] }
strum.workspace = true
strum_macros.workspace = true
time = { workspace = true, features = ["serde-human-readable", "formatting"] }
