[package]
name = "cli-victorhqc-com"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
core-victorhqc-com = { path = "../core" }
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = "1.0.210"
serde_json = "1.0.128"
snafu = "0.8.5"
tokio = "1.40.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
