[package]
name = "cli-victorhqc-com"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
console = "0.15.8"
core-victorhqc-com.workspace = true
dotenvy.workspace = true
futures = "0.3.31"
image = "0.25.3"
indicatif = "0.17.8"
itertools = "0.13.0"
log.workspace = true
pretty_env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["full"] }
webp = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
