[package]
name = "core-victorhqc-com"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
once_cell = "1.20.1"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snafu = "0.8.5"
sqlx = { version = "0.8.2", features = [ "sqlite", "runtime-tokio", "macros", "migrate", "time" ] }
strum = "0.26.3"
strum_macros = "0.26.4"
time = { version = "0.3.36", features = ["serde-human-readable", "formatting"] }
