[package]
name = "core-victorhqc-com"
version = "1.1.1"
edition = "2021"
publish = false

[dependencies]
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.56.0"
log = { workspace = true }
once_cell = "1.20.1"
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true, features = [
  "sqlite",
  "runtime-tokio",
  "macros",
  "migrate",
  "time",
] }
strum = { workspace = true }
strum_macros = { workspace = true }
time = { workspace = true, features = ["serde-human-readable", "formatting"] }
uuid = { workspace = true }

[profile.dev.package.sqlx-macros]
opt-level = 3
