[package]
name = "web-victorhqc-com"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-files = "0.6.6"
actix-quick-extract = "0.1.0-beta.0"
actix-web = "4.9.0"
core-victorhqc-com.workspace = true
dotenvy.workspace = true
graphql_client = "0.14.0"
lazy_static = "1.5.0"
log.workspace = true
pretty_env_logger.workspace = true
rand = { workspace = true, features = ["alloc"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { workspace = true, features = ["derive"] }
snafu = { workspace = true, features = ["default", "backtrace"] }
strum.workspace = true
strum_macros.workspace = true
tera = "1.20.0"
uaparser = "0.6.4"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
