[package]
name = "web-victorhqc-com"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
core-victorhqc-com.workspace = true
dotenvy.workspace = true
graphql_client = "0.14.0"
lazy_static = "1.5.0"
log.workspace = true
md5.workspace = true
pretty_env_logger.workspace = true
rand = { workspace = true, features = ["alloc"] }
reqwest = { version = "0.12.9", features = ["json", "native-tls-vendored"] }
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.8"
snafu = { workspace = true, features = ["default", "backtrace"] }
sqlx = { workspace = true, features = [
  "sqlite",
  "runtime-tokio",
  "macros",
  "migrate",
  "time",
] }
strum.workspace = true
strum_macros.workspace = true
time = { workspace = true, features = ["serde-human-readable", "formatting"] }
tokio.workspace = true
tera = "1.20.0"
uaparser = "0.6.4"
url = "2.5.4"
uuid = { workspace = true }

[build-dependencies]
flate2 = "1.0.35"
reqwest = { version = "0.11", features = ["blocking"] }
walkdir = "2.5.0"
zip = "2.2.2"
